src/styles/tokens.css
:root {
  /* Colors */
  --color-pink: #d50072;
  --color-brand-elife-pink: #d71d62;
  --color-white: #fff;
  --color-dark-purple: #440535;
  --color-peach: #fce4c8;
  --gradient-peach-1: linear-gradient(to bottom, #ffe6bb 0%, #f6c6a7 100%);
  --color-cream: #fef6ee;
  --color-peach-text: #1b0a3c;

  /* Spacing scale */
  --space-xs: 0.5rem; /* 8px */
  --space-sm: 0.75rem; /* 12px */
  --space-md: 1.5rem; /* 24px */
  --space-lg: 2.5rem; /* 40px */
  --space-xl: 4rem; /* 64px */
  --space-2xl: 6rem; /* 96px */
  --space-m-xl: clamp(1.5rem, 0.6818rem + 4.0909vw, 3.75rem);
  --vertical-space-between-sections: clamp(
    3.75rem,
    calc(2.386rem + 6.818vw),
    7.5rem
  );
  --large-vertical-space: clamp(6.25rem, calc(2.841rem + 17.045vw), 15.625rem);

  /* Hero heights */
  --hero-height-default: 500px;
  --hero-height-sm: 35rem;
  --hero-height-md: 40rem;
  --hero-height-lg: 47.5rem;
  --hero-height-xl: 55rem;
}

